syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.employee;

message ProtoEmployee {
    string name = 1;
    string surname = 2;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoEmployee employees = 1;
}

message CreateRequest {
	ProtoEmployee employee = 1;
}

message CreateResponse {
    string id = 1;
}

service EmployeeService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}